--- a/resources/scss/_overview.scss
+++ b/resources/scss/_overview.scss
@@ -1,6 +1,25 @@
 @mixin styles($parent) {
+
+  #{$parent}__actions {
+    &__create {
+      @apply bg-blue-500 py-2 px-4 rounded text-white uppercase text-sm font-bold tracking-wide hover:bg-opacity-90;
+    }
+  }
+
   #{$parent}__legend {
     @apply flex select-none;
+
+    &__wrapper {
+      @apply space-y-4;
+    }
+
+    &__card {
+      @apply overflow-hidden;
+    }
+
+    &__scrollbar {
+      @apply relative;
+    }
 
     &__item {
       @apply text-white text-center py-4 px-10 flex items-center justify-center space-x-2;
@@ -23,6 +42,10 @@
   #{$parent}__overview {
     @apply relative flex w-full select-none overflow-hidden;
 
+    &__wrapper {
+      @apply p-5;
+    }
+
     &__content {
       @apply relative overflow-hidden;
       min-height: 400px;
@@ -31,6 +54,10 @@
 
     &__side {
       @apply bg-white h-full z-30;
+    }
+
+    &__table {
+      @apply relative w-full;
     }
 
     &__heading {
