move tailwind classes from attendance request
Issue: IN-183

--- a/resources/scss/style.scss
+++ b/resources/scss/style.scss
@@ -1,4 +1,6 @@
 @use 'overview';
+@use 'request';
+
 
 $rootSelector: '.hito-attendance';
 
@@ -7,3 +9,4 @@ $rootSelector: '.hito-attendance';
 }
 
 @include overview.styles($rootSelector);
+@include request.styles($rootSelector);
