move tailwind classes from attendance report
Issue: IN-183

--- a/resources/scss/style.scss
+++ b/resources/scss/style.scss
@@ -1,5 +1,6 @@
 @use 'overview';
 @use 'request';
+@use 'report';
 
 
 $rootSelector: '.hito-attendance';
@@ -10,3 +11,4 @@ $rootSelector: '.hito-attendance';
 
 @include overview.styles($rootSelector);
 @include request.styles($rootSelector);
+@include report.styles($rootSelector);
